--- a/_config.yml
+++ b/_config.yml
@@ -4,8 +4,8 @@ subtitle: Systems and Network Security – Spring 2020
 description: |
              XXXX
              XXXX
-baseurl: "" # the subpath of your site, e.g. /blog/
-url: "https://netsys-security.github.io/sp20" # the base hostname & protocol for your site
+baseurl: "sp20" # the subpath of your site, e.g. /blog/
+url: "https://netsys-security.github.io" # the base hostname & protocol for your site
 syllabus: "xxx"
 githubdir: "netsys-security/sp20"
 
