--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -61,7 +61,7 @@
     url: "/reading/stackguard.pdf"
     ref: R6
   deadlines:
-  - title: Sign online Ethics form
+  - title: Sign online Ethics <a href="https://forms.gle/XzRogNnLaZLf6GEm7" target="_blank">form</a>
 
 
 - title: Return-oriented Programming
