--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -4,7 +4,7 @@
 - title: "Course Overview"
   index: 1
   date: Jan 8
-#  filename: lec01_overview
+  filename: lec01_overview
   description: ""
 
 
