--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -11,6 +11,7 @@
 - title: "Introduction to security"
   index: 2
   date: Jan 10
+  filename: lec02_intro
   description: ""
   readings:
   - title: "How to Read a Paper"
