office hours and update lec1 and lec3

--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -27,6 +27,7 @@
 - title: "Shellcode"
   index: 3
   date: Jan 15
+  filename: lec03_shellcode
   description: ""
   readings:
   - title: x86 Assembly Guide
