--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -151,7 +151,7 @@
   date: Feb 5
   description: ""
   deadlines:
-  - title: A1 deadline @11:59pm
+  - title: A1 deadline is tomorrow @11:59pm
 
 - title: TCP/IP attacks
   #filename: Untitled
