--- a/_data/lectures.yml
+++ b/_data/lectures.yml
@@ -158,8 +158,8 @@
 #  description: "Fuzzing and static and dynamic analysis"
 
 
-- title: OS Attacks
-  #filename: Untitled
+- title: Design Principles
+  filename: lec10_design_principles
   index: 9
   date: Feb 12
   description: ""
@@ -172,7 +172,7 @@
   merge: "yes"
 
 - title: Network Refresher
-  #filename: Untitled
+  filename: lec11_network_refresher
   index: 9
   date: Feb 14
   description: ""
@@ -186,8 +186,8 @@
   merge: "yes"
 
 
-- title: Packet Sniffing and Spoofing
-  #filename: Untitled
+- title: Network Analysis
+  filename: lec12_network_analysis
   index: 10
   date: Feb 26
   description: "Packet Sniffing and Spoofing"
